exercicio de iframe 001

--- a/Exercicios/Ex 024/iframe001.html
+++ b/Exercicios/Ex 024/iframe001.html
@@ -11,5 +11,8 @@
     <p>Acessando o site do 
         <iframe src="https://cursoemvideo.com " frameborder="0"></iframe>
         para aprender a programar</p>
+        <p>
+            o repositório do Guanabara <iframe src="https://gustavoguanabara.github.io" frameborder="0"></iframe> é bem legal
+        </p>
 </body>
 </html>
