--- a/Exercicios/Ex 024/iframe003.html
+++ b/Exercicios/Ex 024/iframe003.html
@@ -28,7 +28,7 @@
 
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nobis commodi praesentium amet accusantium doloribus soluta. Ducimus, voluptates rerum maiores necessitatibus autem sunt ab distinctio laudantium repudiandae perferendis nesciunt eligendi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium dolores neque ratione enim esse consectetur ipsa reprehenderit! Doloribus facere fugiat explicabo ipsa. Provident laboriosam, ad sunt minus totam tenetur et?</p>
 
-   <iframe id="tela" name="frame" src="" >
+   <iframe id="tela" name="frame" srcdoc="" >
     <p>Infelizmente seu navegador não é compatível com isso.</p>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa repudiandae molestiae quo voluptatibus distinctio veniam tempora, quia, ipsam consectetur quaerat, dolore consequatur iste illum pariatur facilis corrupti alias. Autem, velit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi veniam totam maiores ducimus. Delectus aliquid dolore aliquam perferendis quod debitis ullam hic, veniam quasi expedita error id rem, libero saepe.</p>
