--- a/Exercicios/Ex 026/mq005/index.html
+++ b/Exercicios/Ex 026/mq005/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
     <title>Media Query</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu site</h1>
-        <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span>
+        <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="itens">
             <ul>
                 <li><a href="#">Opçao 1</a></li>
@@ -32,6 +33,16 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam rerum laboriosam officia laborum in, porro natus, eaque, illum at est laudantium ducimus ex sed aut cumque? Facilis saepe ullam dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, distinctio debitis fugit minima similique aliquid assumenda, exercitationem quod explicabo enim, dolorem iusto quas fugiat repudiandae eveniet expedita nemo labore accusantium?</p>
         </article>
     </main>
+
+    <script>
+        function mudouTamanho(){
+            if (window.innerWidth >+ 768){
+                itens.style.display = 'block'
+            } else{
+                itens.style.display = 'none'
+            }
+        }
+    </script>
     <script>
         function clickMenu() {
             if (itens.style.display == 'block'){
